# pkg/core/api/prompt_handler.go
@@ -2,18 +2,24 @@ package core
 
 import (
 	"errors"
+	"io"
 	"net/http"
 	"strings"
 
 	"ctoup.com/coreapp/api/helpers"
 	api "ctoup.com/coreapp/api/openapi/core"
 	"github.com/gin-gonic/gin"
+	"github.com/rs/zerolog/log"
 
 	"ctoup.com/coreapp/pkg/core/db"
 	"ctoup.com/coreapp/pkg/core/db/repository"
 	"ctoup.com/coreapp/pkg/core/service"
+	"ctoup.com/coreapp/pkg/core/service/gochains"
+	"ctoup.com/coreapp/pkg/shared/event"
+	"ctoup.com/coreapp/pkg/shared/llmmodels"
 	"ctoup.com/coreapp/pkg/shared/repository/subentity"
 	access "ctoup.com/coreapp/pkg/shared/service"
+	"ctoup.com/coreapp/pkg/shared/util"
 	"github.com/google/uuid"
 	"github.com/jackc/pgx/v5"
 	"github.com/jackc/pgx/v5/pgtype"
@@ -45,12 +51,15 @@ func (exh *PromptHandler) AddPrompt(c *gin.Context) {
 		return
 	}
 	params := repository.CreatePromptParams{
-		UserID:     userID.(string),
-		TenantID:   tenantID.(string),
-		Name:       req.Name,
-		Content:    req.Content,
-		Tags:       req.Tags,
-		Parameters: req.Parameters,
+		UserID:             userID.(string),
+		TenantID:           tenantID.(string),
+		Name:               req.Name,
+		Content:            req.Content,
+		Tags:               req.Tags,
+		Parameters:         req.Parameters,
+		SampleParameters:   util.ToJSON(req.SampleParameters),
+		Format:             string(req.Format),
+		FormatInstructions: util.ToNullableText(&req.FormatInstructions),
 	}
 	prompt, err := exh.store.CreatePrompt(c, params)
 	if err != nil {
@@ -73,12 +82,15 @@ func (exh *PromptHandler) UpdatePrompt(c *gin.Context, id uuid.UUID) {
 		return
 	}
 	params := repository.UpdatePromptParams{
-		ID:         id,
-		TenantID:   tenantID.(string),
-		Name:       pgtype.Text{String: req.Name, Valid: true},
-		Content:    pgtype.Text{String: req.Content, Valid: true},
-		Tags:       req.Tags,
-		Parameters: req.Parameters,
+		ID:                 id,
+		TenantID:           tenantID.(string),
+		Name:               pgtype.Text{String: req.Name, Valid: true},
+		Content:            pgtype.Text{String: req.Content, Valid: true},
+		Tags:               req.Tags,
+		Parameters:         req.Parameters,
+		SampleParameters:   util.ToJSON(req.SampleParameters),
+		Format:             string(req.Format),
+		FormatInstructions: util.ToNullableText(&req.FormatInstructions),
 	}
 	_, err := exh.store.UpdatePrompt(c, params)
 	if err != nil {
@@ -189,7 +201,7 @@ func (exh *PromptHandler) ListPrompts(c *gin.Context, params api.ListPromptsPara
 }
 
 // ExecutePrompt implements api.ServerInterface.
-func (h *PromptHandler) ExecutePrompt(c *gin.Context, params api.ExecutePromptParams) {
+func (h *PromptHandler) FormatPrompt(c *gin.Context, params api.FormatPromptParams) {
 	tenantID, exists := c.Get(access.AUTH_TENANT_ID_KEY)
 	if !exists {
 		c.JSON(http.StatusInternalServerError, errors.New("TenantID not found"))
@@ -238,7 +250,6 @@ func (h *PromptHandler) ExecutePrompt(c *gin.Context, params api.ExecutePromptPa
 			c.JSON(http.StatusInternalServerError, helpers.ErrorResponse(err))
 			return
 		}
-
 	}
 
 	result, err := h.executionService.ExecutePrompt(c, prompt, service.ExecutePromptParams{
@@ -254,7 +265,163 @@ func (h *PromptHandler) ExecutePrompt(c *gin.Context, params api.ExecutePromptPa
 		return
 	}
 
-	c.JSON(http.StatusOK, api.ExecutePromptResponse{
+	c.JSON(http.StatusOK, api.PromptResponse{
+		Result: result,
+	})
+}
+
+// ExecutePrompt implements api.ServerInterface.
+func (h *PromptHandler) ExecutePrompt(c *gin.Context, queryParams api.ExecutePromptParams) {
+	tenantID, exists := c.Get(access.AUTH_TENANT_ID_KEY)
+	if !exists {
+		c.JSON(http.StatusInternalServerError, errors.New("TenantID not found"))
+		return
+	}
+
+	var req api.ExecutePromptJSONRequestBody
+	if err := c.ShouldBindJSON(&req); err != nil {
+		c.JSON(http.StatusBadRequest, helpers.ErrorResponse(err))
+		return
+	}
+
+	// get prompt by id in query params and convert into uuid.UUID
+	id := queryParams.Id
+	name := queryParams.Name
+	if id == nil && name == nil {
+		c.JSON(http.StatusBadRequest, helpers.ErrorResponse(errors.New("id or name must be provided")))
+		return
+	}
+	var prompt repository.CorePrompt
+	var err error
+	if id != nil {
+		prompt, err = h.store.GetPromptByID(c, repository.GetPromptByIDParams{
+			ID:       *id,
+			TenantID: tenantID.(string),
+		})
+		if err != nil {
+			if err.Error() == pgx.ErrNoRows.Error() {
+				c.JSON(http.StatusNotFound, helpers.ErrorResponse(errors.New("prompt not found")))
+				return
+			}
+			c.JSON(http.StatusInternalServerError, helpers.ErrorResponse(err))
+			return
+		}
+
+	} else {
+		prompt, err = h.store.GetPromptByName(c, repository.GetPromptByNameParams{
+			Name:     *name,
+			TenantID: tenantID.(string),
+		})
+		if err != nil {
+			if err.Error() == pgx.ErrNoRows.Error() {
+				c.JSON(http.StatusNotFound, helpers.ErrorResponse(errors.New("prompt not found")))
+				return
+			}
+			c.JSON(http.StatusInternalServerError, helpers.ErrorResponse(err))
+			return
+		}
+
+	}
+
+	userID, exist := c.Get(access.AUTH_USER_ID)
+	if !exist {
+		c.JSON(http.StatusBadRequest, "Need to be authenticated")
+		return
+	}
+	clientChan := make(chan event.ProgressEvent)
+
+	maxTokens := 2000
+	if queryParams.MaxTokens != nil {
+		maxTokens = int(*queryParams.MaxTokens)
+	}
+	if queryParams.Llm == nil {
+		c.JSON(http.StatusBadRequest, "LLM must be provided as query parameter")
+		return
+	}
+	llm := string(*queryParams.Llm)
+
+	if queryParams.Provider == nil {
+		c.JSON(http.StatusBadRequest, "Provider must be provided as query parameter")
+		return
+	}
+	if !llmmodels.Provider(*queryParams.Provider).IsValid() {
+		c.JSON(http.StatusBadRequest, "Invalid provider")
+		return
+	}
+	provider := llmmodels.Provider(*queryParams.Provider)
+
+	go func() {
+		defer func() {
+			clientChan <- event.NewProgressEvent("INFO",
+				"Answer Generation Ended", 100)
+			close(clientChan)
+		}()
+
+		// Convert *map[string]string to map[string]any for GenerateAnswer
+		params := make(map[string]any)
+		if req.Parameters != nil {
+			for k, v := range *req.Parameters {
+				params[k] = v
+			}
+		}
+
+		chainConfig, err := gochains.NewBaseChain(
+			prompt.Content,
+			prompt.Parameters,
+			prompt.FormatInstructions.String,
+			maxTokens,
+			provider,
+			llm,
+			prompt.Format == "json",
+		)
+		if err != nil {
+			log.Printf("Error generating answer: %v", err)
+			clientChan <- event.NewProgressEvent("ERROR",
+				"Generation answer error NewBaseChain", 10)
+			return
+		}
+
+		_, err = h.executionService.GenerateAnswer(c,
+			chainConfig,
+			params, // pass the converted params
+			userID.(string),
+			clientChan,
+		)
+
+		if err != nil {
+			log.Printf("Error generating answer: %v", err)
+			clientChan <- event.NewProgressEvent("ERROR",
+				"Generation answer error", 55)
+			return
+		}
+	}()
+
+	c.Stream(func(w io.Writer) bool {
+		// Stream message to client from message channel
+		if msg, ok := <-clientChan; ok {
+			c.SSEvent("message", msg)
+			if msg.EventType == "ERROR" || msg.Progress == 100 {
+				return false
+			}
+			return true
+		}
+		return false
+	})
+
+	result, err := h.executionService.ExecutePrompt(c, prompt, service.ExecutePromptParams{
+		Parameters: *req.Parameters,
+	})
+
+	if err != nil {
+		if strings.HasPrefix(err.Error(), "missing required parameter:") {
+			c.JSON(http.StatusBadRequest, helpers.ErrorResponse(err))
+			return
+		}
+		c.JSON(http.StatusInternalServerError, helpers.ErrorResponse(err))
+		return
+	}
+
+	c.JSON(http.StatusOK, api.PromptResponse{
 		Result: result,
 	})
 }
